--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h1>Gerenciamento de Banca</h1>
 
     <div class="container">
-        <div>
+        <div class="extra">
             <label for="banca-inicial">Banca Inicial:</label>
             <input type="number" id="banca-inicial">
             <button id="atualizar-banca">Atualizar</button>
         </div>
 
-        <div id="extra">
+        <div class="extra">
             <label for="meta">Meta:</label>
             <select id="tipo-meta">
                 <option value="percent">%</option>
