--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="atualizar-banca">Atualizar</button>
         </div>
 
-        <div class="extra">
+        <div>
             <label for="meta">Meta:</label>
             <select id="tipo-meta">
                 <option value="percent">%</option>
